[gd_scene load_steps=14 format=2]

[ext_resource path="res://Textures/Laser1.png" type="Texture" id=1]
[ext_resource path="res://Textures/Laser2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Laser.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Eraser.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Duplicater.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Effect.gd" type="Script" id=6]
[ext_resource path="res://Sounds/kick.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/laser.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/laser2.wav" type="AudioStream" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[node name="Laser" type="Node2D"]
position = Vector2( 512, 0 )
scale = Vector2( 1, 0.2 )
script = ExtResource( 3 )

[node name="Duplicater" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="LaserGreen" type="Sprite" parent="Duplicater"]
material = SubResource( 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -512, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 48 )

[node name="LaserWhite" type="Sprite" parent="Duplicater"]
material = SubResource( 2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -512, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 48 )

[node name="Eraser" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="LaserUp" type="Node2D" parent="Eraser"]

[node name="LaserGreen" type="Sprite" parent="Eraser/LaserUp"]
material = SubResource( 3 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -512, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 48 )

[node name="LaserWhite" type="Sprite" parent="Eraser/LaserUp"]
material = SubResource( 2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -512, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 48 )

[node name="LaserDown" type="Node2D" parent="Eraser"]

[node name="LaserGreen" type="Sprite" parent="Eraser/LaserDown"]
material = SubResource( 4 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -512, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 48 )

[node name="LaserWhite" type="Sprite" parent="Eraser/LaserDown"]
material = SubResource( 2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -512, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 48 )

[node name="Effect" type="Node2D" parent="Eraser"]
script = ExtResource( 6 )

[node name="KickDuplicater" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="LaunchEraser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 2.0

[node name="KickEraser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 2.0
